<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/organizer_nav"
    app:startDestination="@id/organizerEvents">

    <fragment
        android:id="@+id/organizerEvents"
        android:name="com.example.minion_project.organizer.OrganizerEvents"
        android:label="fragment_organizer_events"
        tools:layout="@layout/fragment_organizer_events" />
    <fragment
        android:id="@+id/organizerCreateEvent"
        android:name="com.example.minion_project.organizer.OrganizerCreateEvent"
        android:label="fragment_organizer_create_event"
        tools:layout="@layout/fragment_organizer_create_event" />
</navigation>