<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.UserSettingsFragment"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@color/white">
    <!-- Profile Image and Buttons in Row Layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hey! Have we met?"
        android:id="@+id/userNotRecognized"
        android:fontFamily="sans-serif-thin"
        android:textColor="@color/material3deepPurple"
        android:textSize="60sp"
        >
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="20dp">

        <!-- Profile ImageView -->
        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="116dp"
            android:layout_height="106dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="User Profile Picture"
            android:scaleType="centerCrop"
            android:padding="16sp"
            android:src="@drawable/baseline_account_circle_24" />

        <!-- Buttons for Change and Remove in Column -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Change Image Button -->
            <Button
                android:id="@+id/setImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:fontFamily="sans-serif-light"
                android:padding="8dp"
                android:text="Set Image"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>


    </LinearLayout>

    <EditText
        android:id="@+id/name"
        android:fontFamily="sans-serif-light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10px"
        android:hint="Name"
        android:paddingBottom="50px" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10px"
        android:fontFamily="sans-serif-light"
        android:hint="Email"
        android:paddingBottom="50px" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10px"
        android:fontFamily="sans-serif-light"
        android:hint="Phone Number"
        android:paddingBottom="50px"
        android:inputType="phone"/>
    <EditText
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:fontFamily="sans-serif-light"
        android:layout_height="wrap_content"
        android:layout_margin="10px"
        android:hint="Location"
        android:paddingBottom="50px" />

    <CheckBox
        android:id="@+id/organizer_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10px"
        android:fontFamily="sans-serif-light"
        android:minHeight="48dp"
        android:text="&quot;Register as Organizer&quot;" />

    <CheckBox
        android:id="@+id/user_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10px"
        android:fontFamily="sans-serif-light"
        android:minHeight="48dp"
        android:text="&quot;Register as Attendee&quot;" />


    <Button
        android:id="@+id/signup_button"
        android:fontFamily="sans-serif-light"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:text="Sign Me Up!"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</LinearLayout>
