<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/fragment_sign_up"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="198dp"
        tools:layout_editor_absoluteY="0dp">
    </FrameLayout>


    <TextView
        android:id="@+id/choose_page_launch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Minion Events"
        android:fontFamily="sans-serif-thin"
        android:layout_marginBottom="160dp"
        android:textColor="@color/material3deepPurple"
        android:textSize="100sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/choose_page_launch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50sp"
        >

        <Button
            android:id="@+id/organizerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:text="@string/organizer"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/choose_page_launch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:fontFamily="sans-serif-thin"
            android:textSize="20sp"
            android:layout_marginEnd="15dp"
            android:stateListAnimator="@null"
            android:textAllCaps="false"
            android:visibility="gone"

            />

        <Button
            android:id="@+id/userBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:text="@string/user"
            android:textSize="20sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/organizerBtn"
            android:layout_marginEnd="15dp"
            app:layout_constraintTop_toBottomOf="@id/choose_page_launch"
            android:textAllCaps="false"
            android:stateListAnimator="@null"
            android:visibility="gone"
            android:fontFamily="sans-serif-thin"

            />
        <Button
            android:id="@+id/adminBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:stateListAnimator="@null"
            android:background="@drawable/round_button"
            android:text="@string/admin"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/userBtn"
            android:layout_marginEnd="15dp"
            app:layout_constraintTop_toBottomOf="@id/choose_page_launch"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAllCaps="false"
            android:visibility="gone"
            android:fontFamily="sans-serif-thin"

            />

    </LinearLayout>



    <Button
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:textAllCaps="false"
        android:text="\n\n\n\n\n\n\n\n\nTap Anywhere to Jump In"
        android:fontFamily="sans-serif-thin"
        android:textSize="45sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>