<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_user_attending"
        android:title="Attending"
        android:icon="@drawable/baseline_tag_faces"/>
    <item
        android:id="@+id/menu_user_updates"
        android:title="Updates"
        android:icon="@drawable/baseline_notifications"/>
    <item
        android:id="@+id/menu_user_scan_qr"
        android:title="Scan QR"
        android:icon="@drawable/baseline_qr_code_scanner"/>
    <item
        android:id="@+id/menu_user_settings"
        android:title="Settings"
        android:icon="@drawable/baseline_settings"/>
</menu>