...
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <!-- Text in the Middle -->
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="What's Popping"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/topBar"
                app:layout_constraintLeft_toLeftOf="@id/topBar"
...
