<resources>
    <string name="app_name">minion-project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="user">User</string>
    <string name="login_signup_with_deviceid">Login/Signup with DeviceID</string>
    <string name="organizer">Organizer</string>
    <string name="admin">Admin</string>
    <string name="choose_page_launch">Choose which page to launch</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>